[gd_scene format=3 uid="uid://cbsuhe7my4ttl"]

[ext_resource type="Script" uid="uid://cd88x2t70g7yn" path="res://Interface/Inventory/Shop/shop_ui.gd" id="1_8js8v"]
[ext_resource type="Script" uid="uid://crfuvv7qrrub3" path="res://Data/InventoryData.gd" id="2_ob0a7"]
[ext_resource type="Script" uid="uid://bg2a6tr7dx7cs" path="res://Data/InventorySlotData.gd" id="3_e6hud"]
[ext_resource type="Resource" uid="uid://bu7k1xa16ud57" path="res://Interface/TestStuff/item_carrot.tres" id="4_6qn1n"]
[ext_resource type="Resource" uid="uid://bqn8wysukgnd8" path="res://Interface/TestStuff/item_hammer.tres" id="5_lgrcb"]
[ext_resource type="Resource" uid="uid://c1cqxlfgintig" path="res://Interface/TestStuff/item_boots.tres" id="6_e6hud"]
[ext_resource type="Resource" uid="uid://fligqycw40pd" path="res://Interface/TestStuff/item_harp.tres" id="6_l6cp0"]
[ext_resource type="StyleBox" uid="uid://cu8wrnw314hjl" path="res://Interface/Styles/InventoryPanelStyle.tres" id="7_vrdig"]
[ext_resource type="Resource" uid="uid://bmahi1w8kf6yv" path="res://Interface/TestStuff/cocaine.tres" id="8_6qn1n"]
[ext_resource type="PackedScene" uid="uid://d3yl41a7rncgb" path="res://Interface/Inventory/inventory_slot_ui.tscn" id="8_ee1af"]
[ext_resource type="Resource" uid="uid://c13wc1u5p42sr" path="res://Data/Items/Food/egg.tres" id="8_l0gjo"]
[ext_resource type="Resource" uid="uid://ijbovam7ggbb" path="res://Data/Items/Food/steak.tres" id="9_d02bp"]
[ext_resource type="Resource" uid="uid://xh53w2i0oo5t" path="res://Data/Items/Food/cookie.tres" id="10_241a7"]
[ext_resource type="Resource" uid="uid://cxrefwwe5mbqu" path="res://Data/Items/Food/toast.tres" id="11_v4hxh"]
[ext_resource type="Resource" uid="uid://bkihuf3f23auk" path="res://Data/Items/Food/coffee.tres" id="12_vdlb4"]
[ext_resource type="Resource" uid="uid://ib385dgptwrd" path="res://Data/Items/Food/wine.tres" id="13_c0meh"]
[ext_resource type="Resource" uid="uid://jo0gq5u6e4hl" path="res://Data/Items/Misc/parody_movie.tres" id="15_qtknh"]
[ext_resource type="Resource" uid="uid://bbcvmy2ujko5d" path="res://Data/Items/Equippables/pistol.tres" id="16_jak1g"]
[ext_resource type="Resource" uid="uid://dt7862782ov4v" path="res://Data/Items/Misc/resistance_pamphlet.tres" id="17_6o2oc"]
[ext_resource type="Texture2D" uid="uid://c8ptw3jtdkmqe" path="res://Interface/TestStuff/test_atlas_texture.tres" id="20_241a7"]
[ext_resource type="Script" uid="uid://c71dv8rsa3jlu" path="res://Interface/Inventory/Shop/buyback_ui.gd" id="20_v4hxh"]
[ext_resource type="Texture2D" uid="uid://bif3lbyihceg0" path="res://Interface/TestStuff/test_item_spritesheet.png" id="21_v4hxh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hvb16"]

[sub_resource type="Resource" id="Resource_sxlab"]
script = ExtResource("3_e6hud")
item_data = ExtResource("4_6qn1n")
quantity = 99
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_u6hsv"]
script = ExtResource("3_e6hud")
item_data = ExtResource("5_lgrcb")
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_lgrcb"]
script = ExtResource("3_e6hud")
item_data = ExtResource("6_e6hud")
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_l6cp0"]
script = ExtResource("3_e6hud")
item_data = ExtResource("6_l6cp0")
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_gg0te"]
script = ExtResource("3_e6hud")
item_data = ExtResource("8_l0gjo")
quantity = 99
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_v6pgy"]
script = ExtResource("3_e6hud")
item_data = ExtResource("9_d02bp")
quantity = 6
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_vbufq"]
script = ExtResource("3_e6hud")
item_data = ExtResource("10_241a7")
quantity = 99
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_6tipx"]
script = ExtResource("3_e6hud")
item_data = ExtResource("11_v4hxh")
quantity = 99
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_awqfa"]
script = ExtResource("3_e6hud")
item_data = ExtResource("12_vdlb4")
quantity = 99
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_ett4q"]
script = ExtResource("3_e6hud")
item_data = ExtResource("13_c0meh")
quantity = 6
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_ofwss"]
script = ExtResource("2_ob0a7")
slot_datas = Array[ExtResource("3_e6hud")]([SubResource("Resource_sxlab"), SubResource("Resource_u6hsv"), SubResource("Resource_lgrcb"), SubResource("Resource_l6cp0"), SubResource("Resource_gg0te"), SubResource("Resource_v6pgy"), SubResource("Resource_vbufq"), SubResource("Resource_6tipx"), SubResource("Resource_awqfa"), SubResource("Resource_ett4q")])
metadata/_custom_type_script = "uid://crfuvv7qrrub3"

[sub_resource type="Resource" id="Resource_vrdig"]
script = ExtResource("3_e6hud")
item_data = ExtResource("8_6qn1n")
quantity = 99
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_cilgd"]
script = ExtResource("3_e6hud")
item_data = ExtResource("15_qtknh")
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_t2671"]
script = ExtResource("3_e6hud")
item_data = ExtResource("16_jak1g")
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_c00va"]
script = ExtResource("3_e6hud")
item_data = ExtResource("17_6o2oc")
quantity = 10
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_ee1af"]
script = ExtResource("2_ob0a7")
slot_datas = Array[ExtResource("3_e6hud")]([SubResource("Resource_vrdig"), SubResource("Resource_cilgd"), SubResource("Resource_t2671"), SubResource("Resource_c00va")])
metadata/_custom_type_script = "uid://crfuvv7qrrub3"

[sub_resource type="Resource" id="Resource_xywkj"]
script = ExtResource("3_e6hud")
item_data = ExtResource("6_l6cp0")
quantity = 99
metadata/_custom_type_script = "uid://bg2a6tr7dx7cs"

[sub_resource type="Resource" id="Resource_pjc3g"]
script = ExtResource("2_ob0a7")
slot_datas = Array[ExtResource("3_e6hud")]([SubResource("Resource_xywkj"), null, null, null, null, null, null, null, null, null, null, null])
metadata/_custom_type_script = "uid://crfuvv7qrrub3"

[sub_resource type="Resource" id="Resource_ob0a7"]
script = ExtResource("2_ob0a7")
slot_datas = Array[ExtResource("3_e6hud")]([null, null, null, null, null, null])
metadata/_custom_type_script = "uid://crfuvv7qrrub3"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gur8t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ik1e"]
bg_color = Color(0.32172796, 0.32172796, 0.32172787, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_vdlb4"]
atlas = ExtResource("21_v4hxh")
region = Rect2(224, 384, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ob0a7"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.51937366, 0.14046302, 0.013221324, 1)

[node name="ShopUI" type="PanelContainer"]
custom_minimum_size = Vector2(304, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -559.5
offset_top = -117.0
offset_right = 107.5
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_hvb16")
script = ExtResource("1_8js8v")
legal_inventory_pool = SubResource("Resource_ofwss")
illegal_inventory_pool = SubResource("Resource_ee1af")
legal_shop_inventory = SubResource("Resource_pjc3g")
illegal_shop_inventory = SubResource("Resource_ob0a7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 24

[node name="ShopPanel" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("7_vrdig")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ShopPanel"]
layout_mode = 2
mouse_filter = 2

[node name="ShopHeader" type="Label" parent="HBoxContainer/ShopPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7372549)
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 34
text = "SHOP"
horizontal_alignment = 1

[node name="SlotsPanel" type="PanelContainer" parent="HBoxContainer/ShopPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_gur8t")

[node name="BuySlotContainer" type="GridContainer" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2
columns = 4

[node name="InventorySlotUI" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI2" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI3" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI4" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI5" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI6" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI7" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI8" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI9" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI10" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI11" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="InventorySlotUI12" parent="HBoxContainer/ShopPanel/VBoxContainer/SlotsPanel/BuySlotContainer" instance=ExtResource("8_ee1af")]
layout_mode = 2

[node name="ShopItemContextUI" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_styles/panel = ExtResource("7_vrdig")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ShopItemContextUI"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ShopItemContextUI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ShopItemName" type="Label" parent="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.45080644, 0.603062, 0.86143565, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.54509807)
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 20
text = "ItemName"
horizontal_alignment = 1

[node name="ShopItemDescript" type="RichTextLabel" parent="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.4392157)
bbcode_enabled = true
text = "[center]This is the [color=gold] item [/color] description"
fit_content = true

[node name="ShopFlavorText" type="RichTextLabel" parent="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2784314)
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_italics_font_size = 12
theme_override_font_sizes/italics_font_size = 12
bbcode_enabled = true
text = "[i]This is some lore description to add flavor text to a description"
fit_content = true

[node name="ItemValue" type="Label" parent="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Cost: X"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BuyButton" type="Button" parent="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "BUY"

[node name="BuyQtyContainer" type="HBoxContainer" parent="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
alignment = 1

[node name="BuyQtySlider" type="HSlider" parent="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer/ButtonContainer/BuyQtyContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyQty" type="Label" parent="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer/ButtonContainer/BuyQtyContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "X/XX"
horizontal_alignment = 1

[node name="BuybackUI" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("7_vrdig")
script = ExtResource("20_v4hxh")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/BuybackUI"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/BuybackUI/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="BuybackSlotUI" type="PanelContainer" parent="HBoxContainer/BuybackUI/MarginContainer/VBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_2ik1e")

[node name="ItemUI" type="MarginContainer" parent="HBoxContainer/BuybackUI/MarginContainer/VBoxContainer/BuybackSlotUI"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="BuybackItemTexture" type="TextureRect" parent="HBoxContainer/BuybackUI/MarginContainer/VBoxContainer/BuybackSlotUI/ItemUI"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("20_241a7")
expand_mode = 1

[node name="BuybackQuantity" type="Label" parent="HBoxContainer/BuybackUI/MarginContainer/VBoxContainer/BuybackSlotUI/ItemUI"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "10"

[node name="PriceRow" type="HBoxContainer" parent="HBoxContainer/BuybackUI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CurrencySymbol" type="TextureRect" parent="HBoxContainer/BuybackUI/MarginContainer/VBoxContainer/PriceRow"]
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
texture = SubResource("AtlasTexture_vdlb4")
expand_mode = 1

[node name="BuybuackPriceLabel" type="Label" parent="HBoxContainer/BuybackUI/MarginContainer/VBoxContainer/PriceRow"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="BuybackButton" type="Button" parent="HBoxContainer/BuybackUI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Buyback"

[node name="CloseShopButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_ob0a7")
text = "CLOSE"

[connection signal="mouse_entered" from="HBoxContainer/ShopItemContextUI" to="HBoxContainer/ShopItemContextUI" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/ShopItemContextUI" to="HBoxContainer/ShopItemContextUI" method="_on_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer/ButtonContainer/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="value_changed" from="HBoxContainer/ShopItemContextUI/MarginContainer/VBoxContainer/ButtonContainer/BuyQtyContainer/BuyQtySlider" to="." method="_on_buy_qty_slider_value_changed"]
[connection signal="pressed" from="HBoxContainer/BuybackUI/MarginContainer/VBoxContainer/BuybackButton" to="." method="_on_buyback_button_pressed"]
[connection signal="pressed" from="CloseShopButton" to="." method="_on_close_shop_button_pressed"]
